--- a/logging_elk/logstash/logstash.yml
+++ b/logging_elk/logstash/logstash.yml
@@ -1,3 +1,5 @@
 http.host: "0.0.0.0"
-elasticsearch.hosts: [ "http://elasticsearch:9200" ]
-
+xpack.monitoring.elasticsearch.hosts: [ "http://elasticsearch:9200" ]
+xpack.monitoring.enabled: true
+xpack.monitoring.elasticsearch.username: elastic
+xpack.monitoring.elasticsearch.password: dockerelk
