--- a/nginx/nginx_api.conf
+++ b/nginx/nginx_api.conf
@@ -1,5 +1,5 @@
-upstream kiwee_dashboard_api {
-    server kw-apis:8007;
+upstream dashboard_api {
+    server apis:8007;
 }
 
 server {
@@ -7,7 +7,7 @@ server {
     listen 82;
 
     location / {
-        proxy_pass http://kiwee_dashboard_api;
+        proxy_pass http://dashboard_api;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
