--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,5 @@
-upstream kiwee_gui {
-    server kw-gui:8000;
+upstream gui {
+    server web:8000;
 }
 
 server {
@@ -7,7 +7,7 @@ server {
     listen 80;
 
     location / {
-        proxy_pass http://kiwee_gui;
+        proxy_pass http://gui;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
